# break_axes

./: .gitignore  .pre-commit-config.yaml  README.md  README_cn.md  break_axes.py  examples.ipynb  pyproject.toml  schematic_diagram.drawio  setup.py
examples/: examples.ipynb  heat_capacity_of_ice_and_water.ipynb  remove_minor_ticks.py
examples/icon/: link.txt
image/: break_axes.drawio
src/break_axes/: __init__.py  break_axes.py
