[project]

name = "break_axes"
version = "0.4.0"
authors = [{ name = "Wu Yao", email = "wuyao2020@gmail.com" }]
description = "A Matplotlib-based utility module for creating broken axes."
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib",
]
requires-python = ">=3.8"
dependencies = ["matplotlib>=3.0.0"]

[project.urls]
Homepage = "https://github.com/wuyao1997/break_axes"
Source = "https://github.com/wuyao1997/break_axes"
Documentation = "https://github.com/wuyao1997/break_axes/wiki"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
